# sort_tool

./: README.md  pyproject.toml  test.txt:Zone.Identifier  words1.txt
sort_tool/: main.py
tests/: test_main.py
